<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mEditActivityScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context="com.example.mohamed.happybirthdaycard.EditActivity">

        <ImageView
            android:id="@+id/mAppLogo2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/mAppName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="35dp"
            android:text="@string/mAppName"
            android:textColor="@color/colorPrimary"
            android:textSize="35sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mTextInputLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/mEditTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_name"
                android:inputType="textPersonName"
                android:textColor="#000000" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mTextInputLayoutFriendName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/mEditTextFriendName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_friend_name"
                android:inputType="textPersonName"
                android:textColor="#000000" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/mChooseImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_your_card_image" />

        <Button
            android:id="@+id/mCreateCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView3"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_ad_unit_id3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"></com.google.android.gms.ads.AdView>

    </LinearLayout>
</ScrollView>